# sfos-rs

./: .dockerignore  ATTRIBUTIONS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  MAINTAINERS.md  Makefile  README.md  SECURITY.md  deny.toml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml  codeql.yml  codspeed.yml  dco.yml  release.yml  scorecard.yml  security.yml  trivy.yml
crates/sfos-cli/: Cargo.toml
crates/sfos-cli/src/: main.rs
crates/sfos-sdk/: Cargo.toml
crates/sfos-sdk/benches/: sdk.rs
crates/sfos-sdk/src/: acl.rs  apply.rs  central.rs  client.rs  entity.rs  extract.rs  graph.rs  iac.rs  ir.rs  lib.rs  reach.rs  registry.rs  report.rs  route.rs  shadow.rs  sophos.rs  vpn.rs  xmljson.rs
crates/sfos-sdk/tests/fixtures/: entities-nat.xml  entities-sample.xml  entities-vpn.xml  s2s-site-a.xml  s2s-site-b.xml  sp-site-a.xml  sp-site-b.xml
docs/: README.md  architecture.md  building.md  ci.md  cli-reference.md  errors.md  incident-response.md  maintaining.md  openssf-readiness.md  packaging.md  playbooks.md  safety.md  sdk-guide.md  supply-chain.md
packaging/deb/: build-deb.sh
